# x86-bootable-bin

./: Cargo.toml  Makefile  README.md
.cargo/: config
src/: lib.rs  main.rs  panic.rs  vga_buffer.rs
tests/: boot.rs  panic.rs
