[package]
name = "kernel"
version = "0.1.0"
authors = ["amirrezaask <raskarpour@gmail.com>"]
edition = "2018"

[[test]]
name = "panic"
harness = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
spin = "0.5.2"
volatile = "0.2.6"
bootloader = "0.8.0"
x86_64 = "0.7.5"
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300


